<resources>
    <string name="app_name">Reader</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="prompt_login">Login</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm password</string>
    <string name="prompt_name">Name</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_login">Login must contain at least 4 characters and include only letters and digits</string>
    <string name="invalid_password">Password must contain at least 8 characters and at least 1 number</string>
    <string name="wrong_credentials">Wrong login or password</string>
    <string name="auth_failed">Failed to sign in. Check your internet connection</string>
    <string name="register_failed">Failed to sign up. Check your internet connection</string>
    <string name="invalid_name">Name must contain at least 3 characters</string>
    <string name="not_confirmed">Passwords don\'t match</string>
    <string name="unknown_error">Network error</string>
    <string name="settings">Settings</string>
    <string name="favorites">Favorites</string>
    <string name="home">Home</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="remove_from_favorites">Remove from favorites</string>
    <string name="enable_auto_scroll">Enable auto scroll</string>
    <string name="delete">Delete</string>
    <string name="log_out">Logout</string>
    <string name="switch_to_web_view">Switch to Web View</string>
    <string name="search">Search</string>
    <string name="open_copied_url">Open copied url</string>
    <string name="invalid_url">Invalid url</string>
    <string name="text_settings">Text settings</string>
    <string name="text_size">Text size</string>
    <string name="scroll_speed">Scroll speed</string>
    <string name="sign_in_action">Sign in</string>
    <string name="sign_up_action">Sign up</string>
    <string name="save_changes">Save changes</string>
    <string name="internet_required">Internet connection is required</string>
    <string name="successfully_added">Successfully added article</string>
    <string name="failed_to_add">Failed to add article</string>
    <string name="added_to_fav">Successfully added to favorites</string>
    <string name="removed_from_fav">Successfully removed from favorites</string>
    <string name="failed_to_add_fav">Failed to add to favorites</string>
    <string name="failed_to_remove_fav">Failed to remove from favorites</string>
    <string name="deleted_article">Successfully deleted article</string>
    <string name="failed_to_delete_article">Failed to delete article</string>
    <string name="updated_user">Successfully updated user</string>
    <string name="failed_to_update_user">Failed to update user</string>
</resources>