<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_bottom_nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/favoritesFragment"
        android:name="com.liraf.reader.ui.main.FavoritesFragment"
        android:label="@string/favorites"
        tools:layout="@layout/fragment_favorites" />
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.liraf.reader.ui.main.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.liraf.reader.ui.main.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
</navigation>